--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# FRONTEND
 # dependencies
 frontend/node_modules/
 frontend/node_modules/*
@@ -34,3 +35,8 @@ frontend/.vercel
 # typescript
 frontend/*.tsbuildinfo
 frontend/next-env.d.ts
+
+# BACKEND
+# utility
+backend/.python-version
+backend/__pycache__
