--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# GLOBAL
+.env
+
 # FRONTEND
 # dependencies
 frontend/node_modules/
@@ -39,4 +42,8 @@ frontend/next-env.d.ts
 # BACKEND
 # utility
 backend/.python-version
-backend/__pycache__
+__pycache__
+.env*
+.flaskenv*
+!.env.project
+!.env.vault
