--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,6 +11,9 @@ fastapi = "^0.100.1"
 pyseto = "^1.7.3"
 uvicorn = "^0.23.2"
 python-multipart = "^0.0.6"
+argon2-cffi = "^21.3.0"
+tortoise-orm = {extras = ["asyncmy"], version = "^0.19.3"}
+pydantic-settings = "^2.0.2"
 
 
 [build-system]
