--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# GLOBAL
-.env
-
 # FRONTEND
 # dependencies
 frontend/node_modules/
@@ -46,4 +43,4 @@ __pycache__
 .env*
 .flaskenv*
 !.env.project
-!.env.vault
+README.md
