--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,6 +15,7 @@ argon2-cffi = "^21.3.0"
 tortoise-orm = {extras = ["asyncmy"], version = "^0.19.3"}
 pydantic-settings = "^2.0.2"
 email-validator = "^2.0.0.post2"
+requests = "^2.31.0"
 
 
 [build-system]
