--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -16,6 +16,7 @@ tortoise-orm = {extras = ["asyncmy"], version = "^0.19.3"}
 pydantic-settings = "^2.0.2"
 email-validator = "^2.0.0.post2"
 requests = "^2.31.0"
+cachetools = "^5.3.1"
 
 
 [build-system]
