build: bufferutil and utf-8-validate for socket.io

--- a/backend/package.json
+++ b/backend/package.json
@@ -18,5 +18,9 @@
   },
   "devDependencies": {
     "typescript": "^5.2.2"
+  },
+  "optionalDependencies": {
+    "bufferutil": "^4.0.7",
+    "utf-8-validate": "^5.0.10"
   }
 }
