--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,5 +30,9 @@
   "devDependencies": {
     "@hookform/devtools": "^4.3.1",
     "@svgr/webpack": "^8.1.0"
+  },
+  "optionalDependencies": {
+    "bufferutil": "^4.0.7",
+    "utf-8-validate": "^5.0.10"
   }
 }
