--- a/backend/package.json
+++ b/backend/package.json
@@ -11,13 +11,17 @@
   "author": "Denise Rodriguez",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.17.20",
-    "@types/node": "^20.8.7",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "helmet": "^7.0.0"
+    "express-session": "^1.17.3",
+    "helmet": "^7.0.0",
+    "uniqid": "^5.4.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.20",
+    "@types/express-session": "^1.17.9",
+    "@types/node": "^20.8.7",
+    "@types/uniqid": "^5.3.3",
     "typescript": "^5.2.2"
   }
 }
